# httpx-tenacity

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml  versions.json
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SUPPORT.md
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  02-question.yml  03-feature-request.yml  config.yml
.github/workflows/: auto-merge.yml  cron.yml  docs.yml  main.yml  pyodide.yml  pyodide_test.yml  release.yml  test.yml
0.1/: 404.html  index.html  sitemap.xml
0.1.0/: 404.html  index.html  sitemap.xml
0.1.0/api/: index.html
0.1.0/tutorial/: index.html
0.1/api/: index.html
0.1/tutorial/: index.html
0.2.0/: 404.html  index.html  sitemap.xml
0.2.0/api/: index.html
0.2.0/search/: search_index.json
0.2.0/tutorial/: index.html
docs/: .pages  api.md  index.md  tutorial.md
latest/: 404.html  index.html  objects.inv  sitemap.xml
latest/api/: index.html
latest/search/: search_index.json
latest/tutorial/: index.html
requirements/: requirements-acceptance-tests.py3.10.txt  requirements-acceptance-tests.py3.11.txt  requirements-acceptance-tests.py3.12.txt  requirements-acceptance-tests.py3.13.txt  requirements-acceptance-tests.py3.14.txt  requirements-audit.txt  requirements-dev.txt  requirements-distribution.txt  requirements-docs.txt  requirements-style.txt  requirements-types.txt  requirements-unit-tests.py3.10.txt  requirements-unit-tests.py3.11.txt  requirements-unit-tests.py3.12.txt  requirements-unit-tests.py3.13.txt  requirements-unit-tests.py3.14.txt
src/httpx_tenacity/: __init__.py  async_tenacious_transport.py  retry_callback.py  tenacious_transport.py  types.py  wait.py
tests/acceptance/: conftest.py  test_async_tenacious_transport.py  test_tenacious_transport.py
tests/pyodide/: test_pyodide_compatibility.py
tests/unit/: test_async_tenacious_transport.py  test_retry_callback.py  test_tenacious_transport.py  test_wait.py
