################################################################################
# Build Configuration
################################################################################

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

################################################################################
# Project Configuration
################################################################################

[project]
name = "httpx-tenacity"
dynamic = ["version"]
description = "A lightweight package that provides tenacious (retrying) httpx transports."
authors = [{ name = "Moritz E. Beber", email = "midnighter@posteo.net" }]
license = "Apache-2.0"
readme = { "file" = "README.md", "content-type" = "text/markdown" }
requires-python = ">=3.10"
# Please consult https://pypi.org/classifiers/ for a full list.
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Typing :: Typed",
]
keywords = ["httpx", "tenacity", "retry"]
dependencies = [
    "httpx ~=0.25",
    "tenacity ~=9.1",
    "typing-extensions ~=4.6; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/Midnighter/httpx-tenacity"
Documentation = "https://midnighter.github.io/httpx-tenacity/"
"Source Code" = "https://github.com/Midnighter/httpx-tenacity"
"Bug Tracker" = "https://github.com/Midnighter/httpx-tenacity/issues"
Download = "https://pypi.org/project/httpx-tenacity/#files"

[dependency-groups]
style = ["pydoclint", "ruff"]
types = ["mypy", "ty"]
docs = [
    "mkdocs-material ~=9.5",
    "mkdocstrings[python] ~=1.0",
    "mkdocs-awesome-pages-plugin ~=2.9",
    "mike ~=2.1",
]
tests = ["anyio", "pytest", "pytest-cov", "pytest-httpx", "pytest-raises"]

################################################################################
# Tool Configuration
################################################################################

[tool.hatch.build]
only-packages = true

[tool.hatch.build.targets.wheel]
packages = ["src/httpx_tenacity"]

[tool.hatch.build.hooks.vcs]
version-file = "src/httpx_tenacity/_version.py"

[tool.hatch.version]
source = "vcs"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["raises"]

[tool.coverage.paths]
source = ["src/httpx_tenacity", "*/site-packages/httpx_tenacity"]

[tool.coverage.run]
branch = true
parallel = true
omit = ["src/httpx_tenacity/_version.py"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover"]
precision = 2

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D107",   # 'Missing docstring in __init__' ignored because pydoclint wants us to document the class instead.
    "D203",   # '1 blank line required before class docstring' ignored because we want no blank line.
    "D212",   # 'Multi-line docstring summary should start at the first line' ignored because we want the summary to start on the second line.
    "D407",   # 'Missing dashed underline after section' ignored because Google style docstrings don't underline.
    "ANN002", # 'Missing type annotation for {*args} in method'.
    "ANN003", # 'Missing type annotation for {*kwargs} in method'.
]
exclude = ["src/httpx_tenacity/_version.py"]

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = [
    "E401", # 'Multiple imports on one line'
    "E402", # 'Module level import not at top of file'
    "F401", # 'Imported but unused'
    "I001", # 'Import block is un-sorted or un-formatted' ignored because we may have to import in a particular, not-alphabetical order.
]
"tests/**/*.py" = [
    "S101",    # 'Use of assert detected' ignored because we are using pytest.
    "INP001",  # 'Insecure input' ignored because we are testing.
    "ANN201",  # 'Missing type annotation for {return}' ignored because all tests return `None`.
    "PLR2004", # Magic numbers are okay in tests.
    "FBT001",  # Boolean positional arguments are fine in tests.
]
"tests/pyodide/**/*.py" = [
    "PLC0415", # We explicitly need imports inside function and ignore the '`import` should be at the top-level of a file' rule.
    "I001",    # 'Import block is un-sorted or un-formatted' ignored because we may have to import in a particular, not-alphabetical order.
]

[tool.ruff.lint.isort]
case-sensitive = true
known-first-party = ["src", "httpx_tenacity"]
lines-after-imports = 2

[tool.pydoclint]
style = "google"
arg-type-hints-in-docstring = false
check-return-types = false
check-yield-types = false
exclude = "_version.py"

################################################################################
# Hatch Environments
################################################################################

[tool.hatch.envs.default]
description = """
Base environment with default configuration values.

All environments inheriting from the default also inherit the configuration values set
here.
"""
installer = "uv"

[tool.hatch.envs.dev]
description = """Development environment."""
dependency-groups = ["style", "types", "docs", "tests"]

[tool.hatch.envs.dev.env-vars]
PYTHONDEVMODE = "1"
PYTHONASYNCIODEBUG = "1"

[tool.hatch.envs.style]
description = """Check the style of the codebase."""
dependency-groups = ["style"]
detached = true
installer = "uv"

[tool.hatch.envs.style.scripts]
docstrings = ["pydoclint src", "pydoclint tests"]
code = "ruff check {args}"
format = "ruff format {args}"
fix = "ruff check --fix {args}"
check = ["docstrings", "code"]

[tool.hatch.envs.audit]
description = """Check dependencies for security vulnerabilities."""
extra-dependencies = ["pip-audit"]

[tool.hatch.envs.audit.scripts]
check = ["pip-audit"]

[tool.hatch.envs.types]
description = """Check the static types of the codebase."""
dependency-groups = ["types"]

[tool.hatch.envs.types.scripts]
check = ["mypy src/httpx_tenacity", "ty check src/httpx_tenacity"]

[tool.hatch.envs.docs]
description = """Build or serve the documentation."""
dependency-groups = ["docs"]

[tool.hatch.envs.docs.scripts]
build = "mkdocs build {args:--clean --strict}"
serve = "mkdocs serve {args}"
deploy = "mike deploy {args}"

[tool.hatch.envs.distribution]
description = """Test the source and wheel distribution of the package."""
dependencies = ["pip", "twine"]
detached = true
installer = "uv"
builder = true

[tool.hatch.envs.distribution.scripts]
check = ["pip check", "hatch build {args:--clean}", "twine check dist/*"]

[tool.hatch.envs.unit-tests]
description = """Run the unit tests."""
dependency-groups = ["tests"]

[tool.hatch.envs.unit-tests.env-vars]
PYTHONDEVMODE = "1"
PYTHONASYNCIODEBUG = "1"

[[tool.hatch.envs.unit-tests.matrix]]
python = ["3.10", "3.11", "3.12", "3.13", "3.14"]

[tool.hatch.envs.unit-tests.scripts]
run = "pytest {args:--cov=httpx_tenacity --cov-report=term-missing} {root}/tests/unit"

[tool.hatch.envs.acceptance-tests]
description = """Run the acceptance tests."""
dependency-groups = ["tests"]

[tool.hatch.envs.acceptance-tests.env-vars]
PYTHONDEVMODE = "1"
PYTHONASYNCIODEBUG = "1"

[[tool.hatch.envs.acceptance-tests.matrix]]
python = ["3.10", "3.11", "3.12", "3.13", "3.14"]

[tool.hatch.envs.acceptance-tests.scripts]
run = "pytest {args:--cov=httpx_tenacity --cov-report=term-missing} {root}/tests/acceptance"
